--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 :root {
   --black: #121212;
   --white: #fffffc;
-  --accent: #11122d;
-  --secondary: #8892b0;
-  --third: #00c9db;
+  --accent: #fc5c7d;
+  --secondary: #6a82fb;
   --Roboto: "Roboto", sans-serif;
   --Poppins: "Poppins", sans-serif;
 }
@@ -18,10 +17,10 @@ body {
   font-weight: bold;
 }
 
-/* CETTE PARTIE CONCERNE LA GESTION DU BACKGROUND */
+/* GESTION DU BACKGROUND */
 
 .container {
-  min-height: 400vh;
+  min-height: 100vh;
   background-color: transparent;
   backdrop-filter: blur(250px);
   padding: 0 40px;
@@ -44,16 +43,16 @@ body {
   top: 75%;
   animation: bg-anim 16s infinite;
   flex: none;
-  background: #fc5c7d; /* fallback for old browsers */
+  background: var(--accent); /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to left,
-    #6a82fb,
-    #fc5c7d
+    var(--secondary),
+    var(--accent)
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to left,
-    #6a82fb,
-    #fc5c7d
+    var(--secondary),
+    var(--accent)
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
@@ -66,10 +65,10 @@ body {
   }
 }
 
-/* CETTE PARTIE CONCERNE LA HERO SECTION */
+/* HERO SECTION */
 
 .hero--section {
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
   justify-content: center;
@@ -92,12 +91,59 @@ body {
 
 .hero--title {
   font-size: 4rem;
-  letter-spacing: 2px;
+  line-height: 4rem;
+  letter-spacing: 0.125rem;
   font-family: var(--Poppins);
   color: var(--black);
 }
 
-.cta {
+.letter {
+  font-variation-settings: "wght" 500, "ital" 0;
+  color: var(--accent);
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-name: change;
+  transition-timing-function: ease-in-out;
+}
+
+@keyframes change {
+  0% {
+    font-variation-settings: "wght" 500;
+    color: var(--accent);
+  }
+
+  50% {
+    font-variation-settings: "wght" 900;
+    color: var(--secondary);
+  }
+
+  100% {
+    font-variation-settings: "wght" 500;
+    color: var(--accent);
+  }
+}
+
+.letter:nth-child(n) {
+  animation-delay: calc(0.1s * var(--i));
+}
+
+.cta,
+.cta-reverse:hover {
+  width: 200px;
+  margin: 20px auto 0;
+  padding: 15px;
+  border: 2px solid var(--black);
+  border-radius: 5px;
+  background-color: transparent;
+  color: var(--black);
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.cta:hover,
+.cta-reverse {
+  background: var(--black);
+  color: var(--white);
   width: 200px;
   margin: 20px auto 0;
   padding: 15px;
@@ -107,7 +153,154 @@ body {
   transition: 0.3s ease;
 }
 
-.cta:hover {
+/* SECTION PROJETS */
+
+#projects {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  padding: 50px 0;
+}
+
+.project-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  background: rgba(255, 255, 252, 0.1);
+  border: 2px solid var(--black);
+  border-radius: 5px;
+  padding: 10px;
+  min-height: calc(50vh - 100px);
+}
+
+.project-preview {
+  width: 100%;
+  height: 300px; /* Ajuste selon tes besoins */
+  border: none;
+  overflow: hidden;
+}
+
+.project-card .cta {
+  margin-top: auto;
+}
+
+/* SECTION CONTACT */
+
+#contact {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 50px 0;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+}
+
+label {
+  color: var(--black);
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input {
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  height: 40px;
+  border-radius: 5px;
+  border: 2px solid var(--black);
+  outline: none;
+}
+
+input:focus {
+  outline: none;
+  border: 2px solid var(--secondary);
+}
+
+textarea {
+  height: 150px;
+  border: 2px solid var(--black);
+  border-radius: 5px;
+  outline: none;
+  padding: 5px 10px;
+  margin-bottom: 20px;
+}
+
+textarea:focus {
+  outline: none;
+  border: 2px solid var(--secondary);
+}
+
+.form--btn {
+  width: 150px;
+  padding: 15px;
+  margin: 0 auto;
+  border-radius: 5px;
+  border: 2px solid var(--black);
+  background: transparent;
+  color: var(--black);
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 1.02rem;
+  transition: 0.3s ease-in-out;
+}
+
+.form--btn:hover,
+.form--btn:focus {
   background: var(--black);
   color: var(--white);
+  outline: none;
+}
+
+#formMessage {
+  color: var(--black);
+  font-weight: bold;
+  margin: 5px 0;
+  text-align: center;
+}
+
+/* RESPONSIVE */
+
+@media only screen and (max-width: 1200px) {
+  .hero--right {
+    padding-right: 100px;
+  }
+}
+
+@media only screen and (max-width: 1100px) {
+  .hero--section {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    text-align: center;
+  }
+
+  .hero--right {
+    padding-top: 0;
+    padding-right: 0;
+  }
+
+  .hero--title {
+    letter-spacing: 0;
+  }
+
+  #projects {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #contact {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 580px) {
+  .hero--left {
+    padding-top: 50px;
+  }
 }
