--- a/style.css
+++ b/style.css
@@ -157,10 +157,19 @@ body {
 
 #projects {
   min-height: 100vh;
+  padding: 50px 0;
+}
+
+.subtitle {
+  text-align: center;
+  margin-bottom: 15px;
+  font-size: 2rem;
+}
+
+.project-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  padding: 50px 0;
 }
 
 .project-card {
@@ -189,16 +198,18 @@ body {
 /* SECTION CONTACT */
 
 #contact {
-  min-height: 100vh;
+  padding: 50px 0;
+}
+
+.contact-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 50px 0;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: 10px 40px 40px 40px;
 }
 
 label {
