--- a/reset.css
+++ b/reset.css
@@ -9,8 +9,8 @@ html,
 body {
   height: 100%;
   width: 100%;
-  font-family: sans-serif;
-  line-height: 1.5;
+  font-size: 16px;
+  line-height: 1.2;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
