--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
   --spacingLarge: 4rem;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--textFont);
   background: var(--white);
@@ -176,6 +180,10 @@ body {
   padding: var(--spacingSmall);
   border: 2px solid var(--black);
   border-radius: 5px;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7.9px);
+  -webkit-backdrop-filter: blur(7.9px);
 }
 
 .projectTitle {
@@ -198,7 +206,7 @@ body {
   display: inline-block;
   padding: calc(var(--spacingSmall) / 2);
   margin: auto auto 0;
-  /* width: 100%; */
+  width: 100%;
   border: 2px solid var(--black);
   border-radius: 5px;
 }
@@ -335,8 +343,15 @@ body {
     justify-content: center;
   }
 
+  .projectContainer li {
+    flex: 1 1 600px;
+    max-width: 600px;
+    list-style: none;
+  }
+
   .projectCard {
     margin: 0 auto;
+    width: 100%;
   }
 }
 
@@ -371,8 +386,8 @@ body {
   }
 }
 
-@media screen and (min-width: 1296) {
+@media screen and (min-width: 1296px) {
   .contactMain {
-    margin-top: -64px;
+    margin-top: -70px;
   }
 }
