--- a/style.css
+++ b/style.css
@@ -85,6 +85,15 @@ body {
 }
 
 /* Header */
+.globalHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: var(--spacingLarge);
+  padding: 0 var(--spacingLarge);
+}
+
 .headerMain {
   padding: var(--spacingLarge) 0 var(--spacingLarge);
   text-align: center;
@@ -132,12 +141,6 @@ body {
   transition: 0.3s ease-out;
 }
 
-.headerSecond {
-  display: flex;
-  flex-direction: column;
-  gap: var(--spacingSmall);
-}
-
 .letter {
   font-variation-settings: "wght" 500, "ital" 0;
   color: var(--gradientColor1);
@@ -165,6 +168,57 @@ body {
   animation-delay: calc(0.1s * var(--i));
 }
 
+/* Bio section */
+.bioSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.bio {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  max-width: 115ch;
+  margin: 0 auto;
+}
+
+/* Skills section */
+.skillsSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.skillsContainer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.skillCard {
+  padding: 1rem;
+  border: 2px solid var(--black);
+  border-radius: 5px;
+  width: 300px;
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(7.9px);
+  -webkit-backdrop-filter: blur(7.9px);
+
+  h3 {
+    margin-bottom: 1rem;
+  }
+}
+
+.skillsList {
+  li {
+    display: flex;
+    align-items: center;
+  }
+}
+
 /* Project Section */
 .projectContainer {
   display: flex;
@@ -176,6 +230,7 @@ body {
   display: flex;
   flex-direction: column;
   width: clamp(270px, 100%, 600px);
+  min-height: 300px;
   margin: 0 auto;
   padding: var(--spacingSmall);
   border: 2px solid var(--black);
@@ -250,7 +305,7 @@ body {
 
 .contactForm {
   width: 100%;
-  margin-top: var(--spacingSmall);
+  margin-top: var(--spacingMedium);
   padding: var(--spacingSmall) 0;
   display: flex;
   flex-direction: column;
@@ -333,6 +388,10 @@ body {
     max-width: 65ch;
     margin: 0 auto;
   }
+
+  .projectCard {
+    min-height: 600px;
+  }
 }
 
 @media screen and (min-width: 850px) {
@@ -363,12 +422,6 @@ body {
     align-items: center;
     gap: var(--spacingLarge);
     padding: 0 var(--spacingLarge);
-  }
-
-  .headerSecond {
-    padding-right: var(--spacingMedium);
-    max-width: 460px;
-    margin: 0;
   }
 
   .contactContainer {
